# rse-gcapi

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  404.html  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  generate_models.py  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini  update_docs.py
.github/: ISSUE_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml  project.yml  release.yml
api/algorithm_images/: index.html
api/algorithm_jobs/: index.html
api/algorithms/: index.html
api/archive_items/: index.html
api/archives/: index.html
api/client_methods/: index.html
api/images/: index.html
api/interfaces/: index.html
api/models/: index.html
api/raw_image_upload_sessions/: index.html
api/reader_studies/: index.html
api/reader_studies/answers/: index.html
api/reader_studies/answers_mine/: index.html
api/reader_studies/display_sets/: index.html
api/reader_studies/questions/: index.html
api/retries/: index.html
api/sessions/: index.html
api/uploads/: index.html
api/workstation_configs/: index.html
docs/: Makefile  algorithms.md  conf.py  getting-started.md  index.md  index.rst  installation.rst  make.bat  retries.md  usage.rst
docs/algorithm/: download_algorithm_predictions.md  start_algorithm_jobs.md
docs/api/: algorithm_images.md  algorithm_jobs.md  algorithms.md  archive_items.md  archives.md  client_methods.md  images.md  initialisation.md  interfaces.md  models.md  raw_image_upload_sessions.md  reader_studies.md  retries.md  sessions.md  uploads.md  workstation_configs.md
docs/api/reader_studies/: answers.md  answers_mine.md  display_sets.md  questions.md
docs/archive/: create_archive_items.md  download_archive_items.md  update_archive_items.md
docs/examples/: upload_retry_strategy.py
docs/reader_study/: create_display_sets.md  download_answers.md  reuse_images_in_display_sets.md
docs/stylesheets/: extra.css
docs/usage/algorithm/: download_algorithm_outputs.md  download_algorithm_predictions.md  start_algorithm_jobs.md
docs/usage/archive/: create_archive_items.md  download_archive_items.md  update_archive_items.md
docs/usage/reader_study/: create_display_sets.md  download_answers.md  reuse_images_in_display_sets.md  update_display_sets.md
docs/usage/retries/: handling_limits.md
examples/: upload_retry_strategy.py
gcapi/: __init__.py  __version__.py  apibase.py  check_version.py  cli.py  client.py  create_strategies.py  exceptions.py  gcapi.py  gcapi.pyi  localtest.py  model_base.py  models.py  models_proto.py  retries.py  sync_async_hybrid_support.py  sync_support.py  transports.py  typing.py  upload_sources.py
gcapi/schemas/: answer.json  boolean-classification-annotation.json  definitions.json  etdrs-annotation.json  landmark-annotation.json  polygon-annotation.json  post-answer.json  post-boolean-classification-annotation.json  post-etdrs-annotation.json  post-landmark-annotation.json  post-polygon-annotation.json  post-single-polygon-annotation.json  reader-study.json  single-polygon-annotation.json
getting-started/: index.html
license/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: async_client_hybrid_tests.py  async_integration_tests.py  conftest.py  factories.py  integration_tests.py  test_async_transports.py  test_check_version.py  test_create_strategies.py  test_gcapi.py  test_models.py  test_models_proto.py  test_retries.py  test_sync_support.py  test_transports.py  test_upload_sources.py  test_upload_strategies.py  types.py  utils.py
tests/fixtures/: algorithm_evaluation_fixtures.py
tests/scripts/: Dockerfile  algorithm_evaluation_fixtures.py  component_interface_value_fixtures.py  constants.py  copy_io.py  create_test_fixtures.py  development_fixtures.py
tests/testdata/: annotation.json  basic.dcm  invalid_test.json  sagemaker-shim-0-Linux-x86_64  unsupported.dcm
usage/algorithm/download_algorithm_outputs/: index.html
usage/algorithm/download_algorithm_predictions/: index.html
usage/algorithm/start_algorithm_jobs/: index.html
usage/archive/create_archive_items/: index.html
usage/archive/download_archive_items/: index.html
(+6 files in other folders)
