[project]
authors = [
    {name = "James Meakin"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.9, <4.0"
dependencies = [
    "httpx ~= 0.23.0",
    "Click >= 6.0",
    "pydantic",
    "packaging",
]
name = "gcapi"
version = "0.13.3"
description = "Python client for the grand-challenge.org REST API"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[project.urls]
repository = "https://github.com/DIAGNijmegen/rse-gcapi"

[project.scripts]
gcapi = "gcapi.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-randomly",
    "pytest-cov",
    "pyyaml",
    "datamodel-code-generator",
]

[tool.isort]
profile = "black"
known_first_party = ["gcapi", "tests"]
line_length = 79

[tool.black]
line-length = 79
target-version = ['py39']

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
python_files = "tests.py test_*.py *_tests.py"
addopts = "--strict-markers --showlocals"
xfail_strict = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py39, py310, py311, py312, py313

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
allowlist_externals =
    uv
setenv =
    PYTHONPATH = {toxinidir}
commands =
    uv run pytest --cov-branch --cov-report term-missing --cov=tests/ --cov=gcapi/ --basetemp={envtmpdir} {posargs}
"""
