[project]
authors = [
    {name = "James Meakin"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10, <4.0"
dependencies = [
    "httpx ~= 0.23.0",
    "pydantic",
    "packaging",
    "grand-challenge-dicom-de-identifier",
    "asgiref",
    "taskgroup",
]
name = "gcapi"
version = "0.15.0"
description = "Python client for the grand-challenge.org REST API"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]

[project.urls]
GitHub = "https://github.com/DIAGNijmegen/rse-gcapi"
repository = "https://github.com/DIAGNijmegen/rse-gcapi.git"
documentation = "https://diagnijmegen.github.io/rse-gcapi/"
issues = "https://github.com/DIAGNijmegen/rse-gcapi/issues"

[dependency-groups]
dev = [
    "pytest",
    "pytest-randomly",
    "pytest-cov",
    "pyyaml",
    "datamodel-code-generator",
    "pre-commit",
    "mkdocs",
    "mkdocstrings-python",
    "mkdocs-material",
    "griffe-generics",
]

[tool.isort]
profile = "black"
known_first_party = ["gcapi", "tests"]
line_length = 79

[tool.black]
line-length = 79
target-version = ['py310']

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
python_files = "tests.py test_*.py *_tests.py"
addopts = "--strict-markers --showlocals"
xfail_strict = true

[tool.mypy]
python_version = "3.10"
plugins = "pydantic.mypy"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true

[tool.uv]
package = true
